--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,17 @@
    margin-bottom: 10px;
    margin-right: 10px;
    overflow: hidden;
+   width: 250px;
+   height: 350px;
   }
-
+  .imgItem{
+    width: 100%;
+    height: 70%;
+  }
+.imagen-cargando{
+width: 20% !important;
+height: 10%!important;
+}
   .card-grid{
     display: flex;
     flex-direction: row;
